# secd

./: .gitattributes  .gitignore  README.md  flake.nix  secd.cabal
lib/: Bruijn.hs  Lang.hs
report/: flake.nix  main.aux  main.tex  references.bib
report/sections/: 3_section.tex  conclusion.tex  extensions.tex  intro.tex  language.tex  optimizations.tex  secd.tex
src/: Modern.hs  Normal.hs
